Terraform_AWS/Terraform_AWS/aws_instace.tf
/*resource "aws_instance" "rld_ec2" {
  ami = "ami-0fc5d935ebf8bc3bc"
  instance_type = "t2.micro"
  tags = {
    Name = "RLD_EC2"
    Flavor = "Ubuntu"
    Env = "Test"
    IP = "172.31.29.86"
  }
}*/
